<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".MainActivity">

    <LinearLayout
        android:paddingStart="@dimen/safe_area_left_right"
        android:paddingTop="@dimen/safe_area_top_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlSymmetry">

        <TextView
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@android:color/white"
            android:text="Francisco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:paddingEnd="@dimen/safe_area_left_right"
        android:paddingTop="@dimen/safe_area_top_bottom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:tint="@android:color/white"
            android:src="@drawable/ico_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_help" />

        <TextView
            android:textColor="@android:color/white"
            android:text="0.0.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <GridLayout
        android:paddingBottom="@dimen/safe_area_top_bottom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:columnCount="3"
        android:rowCount="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/pagar_btn"
            android:height="@dimen/w_h_btn"
            android:width="@dimen/w_h_btn"
            android:paddingTop="@dimen/pad_top_ico_btn"
            android:drawableTop="@drawable/ico_dollar_sign"
            android:textSize="@dimen/text_size_menu_btn"
            android:text="@string/pagar"/>

        <Button
            android:id="@+id/billetera_btn"
            android:paddingTop="@dimen/pad_top_ico_btn"
            android:height="@dimen/w_h_btn"
            android:width="@dimen/w_h_btn"
            android:drawableTop="@drawable/ico_wallet"
            android:textSize="@dimen/text_size_menu_btn"
            android:text="@string/wallet"/>

        <Button
            android:id="@+id/estaciones_btn"
            android:paddingTop="@dimen/pad_top_ico_btn"
            android:height="@dimen/w_h_btn"
            android:width="@dimen/w_h_btn"
            android:drawableTop="@drawable/ico_map"
            android:textSize="@dimen/text_size_menu_btn"
            android:text="@string/estaciones"/>

        <Button
            android:paddingTop="@dimen/pad_top_ico_btn"
            android:height="@dimen/w_h_btn"
            android:width="@dimen/w_h_btn"
            android:drawableTop="@drawable/ico_tag"
            android:textSize="@dimen/text_size_menu_btn"
            android:text="@string/beneficios"/>

        <Button
            android:paddingTop="@dimen/pad_top_ico_btn"
            android:height="@dimen/w_h_btn"
            android:width="@dimen/w_h_btn"
            android:drawableTop="@drawable/ico_envelope"
            android:textSize="@dimen/text_size_menu_btn"
            android:text="@string/mensajes"/>

        <Button
            android:paddingTop="@dimen/pad_top_ico_btn"
            android:height="@dimen/w_h_btn"
            android:width="@dimen/w_h_btn"
            android:drawableTop="@drawable/ico_cog"
            android:textSize="@dimen/text_size_menu_btn"
            android:text="@string/configuracion"/>

    </GridLayout>

    <ProgressBar
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

</androidx.constraintlayout.widget.ConstraintLayout>